# untied-ulysses

./: .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_LICENSES
torchtitan/: multinode_trainer.slurm  pyproject.toml  run_train.sh
torchtitan/exps/diagnostics/: nvlink_internode_bench.py  nvlink_internode_bench.sh  nvlink_intranode_bench.sh
torchtitan/exps/llama3_70b/: run_all_multinode_70B.sh  run_single_multinode_70B.sh
torchtitan/exps/llama3_8b/: run_all_8B.sh  run_all_8B_SAC.sh  run_all_8B_chunk_size_abl.sh  run_all_8B_strided_ao.sh  run_all_multinode_8B.sh  run_single_8B.sh  run_single_8B_BS.sh  run_single_8B_SAC.sh  run_single_8B_loss.sh  run_single_8B_mem_isolation.sh  run_single_8B_strided_ao.sh  run_single_multinode_8B.sh
torchtitan/exps/qwen3_32b/: run_all_multinode_32B.sh  run_single_multinode_32B.sh
torchtitan/patch_torch_files/: _attention.py  checkpoint_wrapper.py  patch_TAO.py  ulysses_sp.py  utils.py
torchtitan/scripts/estimate/: estimation.py
torchtitan/torchtitan/: config_manager.py  train.py
torchtitan/torchtitan/components/: activation_chkpt.py  activation_chkpt_sync.py  checkpoint.py  loss.py  optimizer.py  tiled_rms_norm.py  tiled_rms_norm_attn.py
torchtitan/torchtitan/datasets/: hf_datasets.py  hf_datasets_cache.py
torchtitan/torchtitan/datasets/tokenizer/: tiktoken.py
torchtitan/torchtitan/distributed/: context_parallel_2d.py  parallel_dims.py  utils.py
torchtitan/torchtitan/models/llama3/: __init__.py  model.py  parallelize_llama.py  state_dict_adapter.py
torchtitan/torchtitan/models/llama3/train_configs/: llama3_70b_test_2d.toml  llama3_8b_test_2d.toml
torchtitan/torchtitan/tools/: logging.py  profiling.py  utils.py
(+43 files in other folders)
