# ---- All project specifications ---- #
[project]
name = "torchtitan"
description = "A PyTorch native library for large-scale model training"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
keywords = ["pytorch", "training", "llm"]
dependencies = [
    # Stateful Dataloader
    "torchdata>=0.8.0",
    # Hugging Face integrations
    "datasets>=2.21.0",
    # Tokenization
    "blobfile",
    "tiktoken",
    # Miscellaneous
    "tomli>=1.1.0",
    "fsspec",
    "tyro>=1.0.5",
    "tensorboard>=2.20.0",
    "liger-kernel>=0.6.4",
    "tokenizers>=0.22.2",
    "transformers>=5.0.0",
    "deepspeed>=0.18.4",
    "torchao>=0.15.0",
    "torchtune>=0.6.1",
    "torch==2.9",
    "flash-attn==2.8.3",
    "wandb"
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/pytorch/torchtitan"
Documentation = "https://github.com/pytorch/torchtitan/tree/main/docs"
Issues = "https://github.com/pytorch/torchtitan/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "tensorboard",
]

[tool.setuptools.dynamic]
version = {file = "assets/version.txt"}


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["torchtitan*"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks

[tool.uv]
extra-build-dependencies = { flash-attn = ["torch"] }
